--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#e3e6e4</color>
     <color name="white">#000000</color>
-    <color name="red">#f5314e</color>
+    <color name="red">#ff5349</color>
     <color name="equal">#fadd4b</color>
+    <color name="blue">#40e0d0</color>
     <color name="bg"> #e9ecef</color>
-    <color name="green">#159A80</color>
+    <color name="green">#90EE90</color>
 </resources>
